@@ -1,4 +1,7 @@
 V2.3.0
+Fixes:
+- Cache (expires_after) is valid when bound to the archive record.
+
 Enhancements:
 - On a connection error, display text reason along with numerical return code.
 - Support more complex json messages.
